Fix title overlapping image on characters-listing.

--- a/app/components/common/CharacterThumbnail/CharacterThumbnail.css
+++ b/app/components/common/CharacterThumbnail/CharacterThumbnail.css
@@ -21,7 +21,8 @@
 
 .thumbnail .caption {
 	color: whitesmoke;
-    padding: 0 9px;
+    line-height: 1em;
+    padding: 0 20px;
     text-align: center;
     position: absolute;
     bottom: 10%;
